--- a/vidly/Views/Customers/Details.cshtml
+++ b/vidly/Views/Customers/Details.cshtml
@@ -1,8 +1,15 @@
-﻿
+﻿@model vidly.Models.Customer
+
 @{
     ViewBag.Title = Model.Name;
-
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>@Model.Name</h2>
+<ul>
+    <li>Membership Type: @Model.MembershipType.Name</li>
+    @if (Model.BirthDateTime.HasValue)
+    {
+        <li>Birthdate: @Model.BirthDateTime.Value.ToShortDateString()</li>
+    }
+</ul>
