--- a/vidly/Views/Customers/CustomerForm.cshtml
+++ b/vidly/Views/Customers/CustomerForm.cshtml
@@ -1,11 +1,11 @@
-﻿@model vidly.ViewModels.NewCustomerViewModel
+﻿@model vidly.ViewModels.CustomerFormViewModel
 @{
     ViewBag.Title = "New";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>New Customer</h2>
-@using (Html.BeginForm("Create", "Customers"))
+@using (Html.BeginForm("Save", "Customers"))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
@@ -14,27 +14,28 @@
 
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.BirthDateTime)
-        @Html.TextBoxFor(m => m.Customer.BirthDateTime, new { @class = "form-control" })
-    </div>
-
-    <div class="checkbox">
-
-
-        <label>
-            @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsLetter) Subscribed To News Letter?
-        </label>
+        @Html.TextBoxFor(m => m.Customer.BirthDateTime,
+            "{0:d MMM yyyy}",
+            new { @class = "form-control" })
     </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.MembershipTypeId)
         @Html.DropDownListFor(
             m => m.Customer.MembershipTypeId,
-            new SelectList(Model.MembershipTypes, 
+            new SelectList(Model.MembershipTypes,
                 "Id",
                 "Name"),
             "Select Membership Type",
             new { @class = "form-control" })
     </div>
+
+    <div class="checkbox">
+        <label>
+            @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsLetter) Subscribed To News Letter?
+        </label>
+    </div>
+    @Html.HiddenFor(m=>m.Customer.Id)
     <button type="submit" class="btn btn-primary">Save</button>
 
 }
